<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    tools:context=".MainActivity">

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_normal_sharedpreferences"
        android:layout_gravity="start"/>

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_securesharedpreferences"
        android:layout_gravity="start"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_secret"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="3">

        <EditText
            android:id="@+id/secrete_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/secret_name"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/secrete_value_edittext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/secret_value"
            android:layout_weight="1"/>


        <Button
            android:id="@+id/save_secret_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/save"
            android:layout_weight="1"/>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fetch_secret"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="100dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="center">

        <EditText
            android:id="@+id/fetch_secrete_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/secret_name"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/fetch_secret_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/fetch"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/fetch_secrete_value_textview"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>